@@ -1,3 +1,7 @@
+2014-12-06 Marco Giammarini <m.giammarini@warcomeb.it>
+
+    * Cambiata la funzione setOwners di ActivityNoteDialog.
+
 2014-12-05 Marco Giammarini <m.giammarini@warcomeb.it>
 
     * Aggiunto il pulsante 'Add Note' nell'activity dialog e la relativa gestione.
